# src/controllers/contest/contest.ts
@@ -1,0 +1,124 @@
+import { apiResponse } from "../../utils";
+import { contestModel } from "../../database";
+import { reqInfo, responseMessage } from "../../helper";
+import { addContestSchema, deleteContestSchema, editContestSchema, getContestSchema } from "../../validation";
+
+const ObjectId: any = require('mongoose').Types.ObjectId;
+
+export const add_contest = async (req, res) => {
+    reqInfo(req);
+    let { user } = req.headers
+    try {
+        const { error, value } = addContestSchema.validate(req.body);
+        if (error) {
+            return res.status(501).json(new apiResponse(501, error?.details[0]?.message, {}, {}));
+        }
+
+        value.createdBy = new ObjectId(user?._id)
+        value.updatedBy = new ObjectId(user?._id)
+
+        const response = await new contestModel(value).save();
+        if (!response) return res.status(404).json(new apiResponse(404, responseMessage?.addDataError, {}, {}));
+        return res.status(200).json(new apiResponse(200, responseMessage?.addDataSuccess("contest"), response, {}));
+    } catch (error) {
+        console.log(error);
+        return res.status(500).json(new apiResponse(500, responseMessage?.internalServerError, {}, error));
+    }
+};
+
+export const edit_contest_by_id = async (req, res) => {
+    reqInfo(req);
+    let { user } = req.headers;
+    try {
+        const { error, value } = editContestSchema.validate(req.body);
+        if (error) {
+            return res.status(501).json(new apiResponse(501, error?.details[0]?.message, {}, {}));
+        }
+        value.updatedBy = new ObjectId(user?._id)
+        const response = await contestModel.findOneAndUpdate({ _id: new ObjectId(value._id), isDeleted: false }, value, { new: true });
+        if (!response) return res.status(404).json(new apiResponse(404, responseMessage?.updateDataError("contest"), {}, {}));
+        return res.status(200).json(new apiResponse(200, responseMessage?.updateDataSuccess("contest"), response, {}));
+    } catch (error) {
+        console.log(error);
+        return res.status(500).json(new apiResponse(500, responseMessage?.internalServerError, {}, error));
+    }
+};
+
+export const delete_contest_by_id = async (req, res) => {
+    reqInfo(req);
+    try {
+        const { error, value } = deleteContestSchema.validate(req.params);
+        if (error) {
+            return res.status(501).json(new apiResponse(501, error?.details[0]?.message, {}, {}));
+        }
+        const response = await contestModel.findOneAndUpdate({ _id: new ObjectId(value.id), isDeleted: false }, { isDeleted: true }, { new: true });
+        if (!response) return res.status(404).json(new apiResponse(404, responseMessage?.getDataNotFound("contest"), {}, {}));
+        return res.status(200).json(new apiResponse(200, responseMessage?.deleteDataSuccess("contest"), {}, {}));
+    } catch (error) {
+        console.log(error);
+        return res.status(500).json(new apiResponse(500, responseMessage?.internalServerError, {}, error));
+    }
+};
+
+export const get_all_contests = async (req, res) => {
+    reqInfo(req);
+    const { page, limit, search } = req.body;
+    let response: any, match: any = {};
+
+    try {
+        match.isDeleted = false;
+
+        if (search) {
+            match.$or = [
+                { firstName: { $regex: search, $options: 'i' } },
+                { lastName: { $regex: search, $options: 'i' } },
+                { email: { $regex: search, $options: 'i' } },
+                { "contact.mobile": { $regex: search, $options: 'i' } }
+            ]
+        }
+
+        response = await contestModel.aggregate([
+            { $match: match },
+            {
+                $facet: {
+                    data: [
+                        { $sort: { createdAt: -1 } },
+                        { $skip: (page - 1) * limit },
+                        { $limit: limit }
+                    ],
+                    data_count: [{ $count: "count" }]
+                }
+            }
+        ])
+
+        return res.status(200).json(new apiResponse(200, responseMessage?.getDataSuccess("contests"), {
+            contest_data: response[0]?.data || [],
+            totalData: response[0]?.data_count[0]?.count || 0,
+            state: {
+                page: page,
+                limit: limit,
+                page_limit: Math.ceil(response[0]?.data_count[0]?.count / limit) || 1,
+            },
+        }, {}))
+    } catch (error) {
+        console.log(error);
+        return res.status(500).json(new apiResponse(500, responseMessage?.internalServerError, {}, error));
+    }
+};
+
+export const get_contest_by_id = async (req, res) => {
+    reqInfo(req);
+    try {
+        const { error, value } = getContestSchema.validate(req.params);
+        if (error) {
+            return res.status(501).json(new apiResponse(501, error?.details[0]?.message, {}, {}));
+        }
+
+        const response = await contestModel.findOne({ _id: new ObjectId(value.id), isDeleted: false });
+        if (!response) return res.status(404).json(new apiResponse(404, responseMessage?.getDataNotFound("contest"), {}, {}));
+        return res.status(200).json(new apiResponse(200, responseMessage?.getDataSuccess("contest"), response, {}));
+    } catch (error) {
+        console.log(error);
+        return res.status(500).json(new apiResponse(500, responseMessage?.internalServerError, {}, error));
+    }
+};
